--- a/build.gradle
+++ b/build.gradle
@@ -65,4 +65,10 @@ dependencies {
     //rxjava2
     implementation "io.reactivex.rxjava2:rxjava:2.1.9"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
+    //Room
+    //implementation "android.arch.persistence.room:runtime:1.0.0-alpha3"
+    //implementation "android.arch.persistence.room:compiler:1.0.0-alpha3"
+    implementation "android.arch.persistence.room:rxjava2:1.0.0-rc1"
+    //implementation "android.arch.lifecycle:reactivestreams:1.0.0-alpha3"
 }
